@@ -1,3 +1,7 @@
+2019-08-04  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with calculating relative file links (Bug 410551).
+
 2019-07-09  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 3.2.1.
